--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Bible Guessing Game</title>
     <link rel="icon" type="image/svg+xml" href="/bible.svg" />
-    <script type="module" src="./bible-guess-game.js"></script>
+    <script type="module" src="./bible-book-guess-game.js"></script>
   </head>
   <body style="background-color: #2a1f14;">
     <bible-guess-game></bible-guess-game>
